# exifmeta

./: .gitignore  Cargo.toml  README-development.md  README.md  build.rs  exif.ps1
.github/workflows/: ci.yml  release.yml
assets/geonames/: cities1000.empty.sqlite
examples/: metadata.yml
schemas/: metadata.schema.json
src/: cli.rs  lib.rs  main.rs  version.rs
tools/: geonames_to_sqlite.py  test_geonames_to_sqlite.py
