[package]
name = "exifmeta"
version = "0.1.0"
edition = "2024"
description = "Read metadata.yaml and write EXIF metadata to image files"
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3"
kamadak-exif = "0.6.1"
rusqlite = { version = "0.32.1", features = ["bundled", "serialize"] }

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true
