[package]
name = "exifmeta"
version = "1.1.0"
edition = "2024"
description = "EXIF tool for photographers. Reads a metadata.yaml and writes EXIF to one or many image files"
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4.5", features = ["derive"] }
colored = "3"
kamadak-exif = "0.6.1"
little_exif = "0.6.23"
rattles = "0.3.1"
rusqlite = { version = "0.32.1", features = ["bundled", "serialize"] }
serde_json = "1"
serde_yaml = "0.9"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true
