[package]
name = "exifmeta"
version = "1.2.0"
edition = "2024"
description = "EXIF tool for photographers. Reads a metadata.yaml and writes EXIF to one or many image files"
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4.5", features = ["derive"] }
colored = "3"
crossterm = "0.29.0"
kamadak-exif = "0.6.1"
little_exif = "0.6.23"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm_0_29"] }
rattles = "0.3.1"
rusqlite = { version = "0.32.1", features = ["bundled", "serialize"] }
serde_json = "1"
serde_yaml = "0.9"

[build-dependencies]
ico = "0.5.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
winresource = "0.1.31"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true
